gitops/broadcasts.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcasts
  namespace: maap
  labels:
    app: broadcasts

spec:
  replicas: 3
  selector:
    matchLabels:
      app: broadcasts

  template:
    metadata:
      labels:
        app: broadcasts

    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - image: gcr.io/maap-test-292714/svc/tst@sha256:3ce5d4f9b7820fa64a30130c52070423bf36e86e92ac30f15ee4221df2000d34
          imagePullPolicy: Always
          name: broadcasts
          ports:
            - containerPort: 8080


---
apiVersion: v1
kind: Service
metadata:
  name: broadcasts
  namespace: maap
  labels:
    app: broadcasts
#  annotations:
#    beta.cloud.google.com/backend-config: '{"default": "iap"}'
#    cloud.google.com/neg: '{"ingress": true}'

spec:
  ports:
    - name: broadcats
      port: 9393
      targetPort: 8080

  selector:
    app: broadcasts
  type: LoadBalancer
