gitops/ingress-mvp.yml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: mvp
  namespace: mvp
  annotations:
    kubernetes.io/ingress.class: gce
    ingress.gcp.kubernetes.io/pre-shared-cert: maap-fbs
    kubernetes.io/ingress.global-static-ip-name: maap-fbs
spec:
  backend:
    serviceName: broadcasts
    servicePort: 80

  rules:
    - host: fobos.app
        http:
          paths:
              - path: /
                backend:
                  serviceName: broadcasts
                  servicePort: 80

    - host: api.fobos.app
        http:
          paths:
              - path: /
                sbackend:
                  serviceName: broadcasts
                  servicePort: 80

    - host: smpp.fobos.app
        http:
          paths:
              - path: /
                sbackend:
                  serviceName: broadcasts
                  servicePort: 80

    - host: ws.fobos.app
      http:
        paths:
          - path: /
            backend:
              serviceName: centrifugo
              servicePort: 80
